# robot_boat

./: .gitignore  README.md  rviz.rviz
filter_pkg/: package.xml  setup.cfg  setup.py
filter_pkg/filter_pkg/: my_node.py  ukf_node.py
filter_pkg/launch/: ukf_node.launch.py
robot_boat_description_pkg/: CMakeLists.txt  package.xml
robot_boat_description_pkg/launch/: urdf_robot_state_publisher.launch.py  urdf_rviz.launch.py
robot_boat_description_pkg/rviz/: rviz_config.rviz
robot_boat_description_pkg/urdf/: robot_boat.gazebo.xacro  robot_boat.urdf  robot_boat.xacro
robot_boat_gazebo_pkg/: CMakeLists.txt  package.xml
robot_boat_gazebo_pkg/launch/: spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  spawn_robot_ros2_utm.launch.py  start_world.launch.py
robot_boat_gazebo_pkg/models/big_cylinder/: model.config  model.sdf
robot_boat_gazebo_pkg/models/sand_plane/: model.config  model.sdf
robot_boat_gazebo_pkg/models/sand_plane/meshes/: sand_plane.dae
robot_boat_gazebo_pkg/scripts/: gps_to_utm.py  p3d_to_compass.py
robot_boat_gazebo_pkg/worlds/: simple_sea.world
robot_boat_navigation_pkg/: CMakeLists.txt  package.xml
robot_boat_navigation_pkg/scripts/: gps_to_utm.py  print_scan.py  target_frame_planner.py
robot_boat_navigation_pkg/src/: path_planning.cpp
